--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <meta charset="utf-8"></meta>
     <head >
-        <title>Tutorial</title>
+        <title>Flappy Bird Clone</title>
         <script type = "text/javascript" src = "js/phaser.js"></script>
         <script type = "text/javascript" src = "js/main.js"></script>
     </head>
