--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8"></meta>
     <head >
         <title>Flappy Bird Clone</title>
-        <script type = "text/javascript" src = "js/phaser.js"></script>
+        <script type = "text/javascript" src = "js/phaser.min.js"></script>
         <script type = "text/javascript" src = "js/main.js"></script>
     </head>
 
