--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <meta charset="utf-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head >
         <title>Flappy Bird Clone</title>
         <script type = "text/javascript" src = "js/phaser.min.js"></script>
